added search path: /users/?username=Lillo
