# service/api/21.searchUserByUsername.go
@@ -1,0 +1,55 @@
+package api
+
+/*
+go run ./cmd/webapi/
+curl -v \
+	-X GET \
+	-H 'Authorization: 1' \
+	localhost:3000/users/?username=Lillo
+*/
+
+import (
+	"github.com/simolillo/WASAPhoto/service/api/reqcontext"
+	"github.com/julienschmidt/httprouter"
+	"encoding/json"
+	"net/http"
+	"strconv"
+)
+
+func (rt *_router) searchUserByUsername(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+
+	var token uint64
+	token, err := strconv.ParseUint(r.Header.Get("Authorization"), 10, 64)
+
+	// Unauthorized check
+	if err != nil {
+		stringErr := "getUserProfile: invalid authorization token"
+		http.Error(w, stringErr, http.StatusUnauthorized)
+		return
+	}
+	_, present, err := rt.db.SearchUserByID(token)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	if !present {
+		stringErr := "getUserProfile: authorization token not matching any existing user"
+		http.Error(w, stringErr, http.StatusUnauthorized)
+		return
+	}
+
+	usernameToSearch := r.URL.Query().Get("username")
+	
+	// database section
+	usersList, err := rt.db.SearchUser(usernameToSearch)
+		
+	// InternalServerError check
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	_ = json.NewEncoder(w).Encode(usersList)
+}
